--- a/Shopping-mall/src/scss/products.scss
+++ b/Shopping-mall/src/scss/products.scss
@@ -1,4 +1,5 @@
 .products {
+  padding: 0;
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3,1fr);
@@ -8,5 +9,9 @@
 .products-item {
   border: 1px solid #000;
   padding:10px;
-
+  &__image {
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
+  }
 }
